# openaisdk_PanaversityYT

./: README.md
Class-08 Google A2A  Agent to Agent Communication & Development, Protoyping, Production using DACA/: OpenAI Agents SDK - Open Source.pptx
Class02_ChatbotStreamingToolsChainlit/step04_hello_agent/: step04_hello_agent.ipynb
Class04_Dataclass_Generics_Callable_understand_SDK_SourceCode/dataclasses/: main.ipynb
Class05_AgentLoop_ToolCall_Handsoff_Memory_Guardrails/: OpenAI Agents SDK - Open Source.pptx  Readme.md
Class06_WhytoAdoptOpenAIAgentsSDK_IntroductiontoMCPs/: OpenAI Agents SDK - Open Source.pptx  Readme.md
Class07_AI Agents_Development_Deployment_&_IntroductiontoDACADesignPattern/: OpenAI Agents SDK - Open Source.pptx  Readme.md
Class08_GoogleA2AAgent2AgentCommunication&Development,Protoyping,Production using DACA/: OpenAI Agents SDK - Open Source.pptx  Readme.md
Class09_Conceptualizing_anEmailAgentOurMindMapBrainstorm/: OpenAI Agents SDK - Open Source.pptx  Readme.md
Class10_UnleashAIAgentsatScaleCloudNativeStrategies&RealWorldUseCasesExplored/: Readme.md
Code_with_MohsinYT/ai_translator/: .env  README.md  main.py  (+1 more)
Code_with_MohsinYT/litellm/03_litellm_openai_agent/01_litellm/myproject/: README.md  pyproject.toml
Code_with_MohsinYT/litellm/03_litellm_openai_agent/01_litellm/myproject/src/myproject/: __init__.py  hello.py
CrashCourse_OpenAISDK_Panaversity/: Readme.md
DiffbetOpenRouterLiteLLM_sirAsharib/: README.md  pyproject.toml  try_litellm.py  try_openrouter.py
quiz_prep_openaisdk/: QuizPrep OpenAI Agent SDK.pptx  Readme.md
(+289 files in other folders)
