[project]
name = "diffbetopenrouterlitellm-sirasharib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.72.4",
    "openai>=1.86.0",
    "openai-agents>=0.0.17",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
